--- a/01_tab/index.html
+++ b/01_tab/index.html
@@ -10,6 +10,8 @@
   <title>tab</title>
 </head>
 <body>
-
+  <p class="hiragana">あいうえお</p>
+  <p id="kakikukeko" class="hiragana">かきくけこ</p>
+  <p class="hiragana">さしすせそ</p>
 </body>
 </html>
