tab切り替え実装

--- a/01_tab/index.html
+++ b/01_tab/index.html
@@ -10,8 +10,21 @@
   <title>tab</title>
 </head>
 <body>
-  <p class="hiragana">あいうえお</p>
-  <p id="kakikukeko" class="hiragana">かきくけこ</p>
-  <p class="hiragana">さしすせそ</p>
+  <ul>
+    <li class="list is-active" data-js="list1">日程</li>
+    <li class="list" data-js="list2">持ち物</li>
+    <li class="list" data-js="list3">そのほか</li>
+  </ul>
+  <div>
+    <div class="content is-active" data-content="list1">
+      2023年3月13日
+    </div>
+    <div class="content" data-content="list2">
+      バナナ、おにぎり、麦茶
+    </div>
+    <div class="content" data-content="list3">
+      前日はよく寝ること
+    </div>
+  </div>
 </body>
 </html>
