[#2]htmlにタグを記載し、その中身を変更するように書き換え

--- a/02_modal/index.html
+++ b/02_modal/index.html
@@ -10,11 +10,15 @@
   <title>tab</title>
 </head>
 <body>
-  <div class="images"></div>
+  <div class="imageBox"></div>
 
   <div class="overlay closeItem"></div>
 
   <div class="modal">
+    <img class="modalImage">
+    <p class="modalTitle"></p>
+    <p class="modalDate"></p>
+    <p class="modalText"></p>
     <div class="closeButton closeItem">閉じる</div>
   </div>
   <div class="divScrollY">縦スクロールさせるためのでかいdiv</div>
