--- a/02_modal/index.html
+++ b/02_modal/index.html
@@ -11,15 +11,15 @@
 </head>
 <body>
   <div class="imageBox"></div>
-
-  <div class="overlay closeItem"></div>
-
-  <div class="modal">
-    <img class="modalImage">
-    <p class="modalTitle"></p>
-    <p class="modalDate"></p>
-    <p class="modalText"></p>
-    <div class="closeButton closeItem">閉じる</div>
+  <div class="modalWrap">
+    <div class="overlay closeItem"></div>
+    <div class="modal">
+      <img class="modalImage">
+      <p class="modalTitle"></p>
+      <p class="modalDate"></p>
+      <p class="modalText"></p>
+      <div class="closeButton closeItem">閉じる</div>
+    </div>
   </div>
   <div class="divScrollY">縦スクロールさせるためのでかいdiv</div>
 </body>
