今更ながらtitleが違ったので修正

--- a/02_modal/index.html
+++ b/02_modal/index.html
@@ -7,7 +7,7 @@
 
   <link rel="stylesheet" href="./src/css/style.css">
   <script src="./src/javascript/script.js"></script>
-  <title>tab</title>
+  <title>modal</title>
 </head>
 <body>
   <div class="imageBox"></div>
