modalレビュー対応

--- a/02_modal/index.html
+++ b/02_modal/index.html
@@ -10,7 +10,7 @@
   <title>modal</title>
 </head>
 <body>
-  <div class="imageBox"></div>
+  <ul class="imageBox"></ul>
   <div class="modalWrap">
     <div class="overlay closeItem"></div>
     <div class="modal">
@@ -18,7 +18,7 @@
       <p class="modalTitle"></p>
       <p class="modalDate"></p>
       <p class="modalText"></p>
-      <div class="closeButton closeItem">閉じる</div>
+      <button class="closeButton closeItem">閉じる</button>
     </div>
   </div>
 </body>
