--- a/03_todoApp/index.html
+++ b/03_todoApp/index.html
@@ -13,8 +13,10 @@
   <h1>todo list</h1>
 
   <input type="text" name="todo" id="todoContent" value="" placeholder="todoを入力">
-  <button type="submit">追加する</button>
+  <button type="button">追加する</button>
 
   <ul class="todoLists"></ul>
+
+  <button type="button" id="reset" class="resetButton">すべてのデータを削除する</button>
 </body>
 </html>
