--- a/03_todoApp/index.html
+++ b/03_todoApp/index.html
@@ -18,5 +18,9 @@
   <ul class="todoLists"></ul>
 
   <button type="button" id="reset" class="resetButton">すべてのデータを削除する</button>
+
+  <input type="checkbox" id="show" class="showFinishedItemButton"></input>
+  <label for="show">完了したデータを表示する</label>
+
 </body>
 </html>
