期日らしきものを追加

--- a/03_todoApp/index.html
+++ b/03_todoApp/index.html
@@ -13,7 +13,8 @@
   <h1>todo list</h1>
 
   <input type="text" name="todo" id="todoContent" value="" placeholder="todoを入力">
-  <button type="button">追加する</button>
+  <input type="date" min="2023-04-01" class="dueDate">
+  <button type="button" id="add" class="addButton">追加する</button>
 
   <ul class="todoLists"></ul>
 
