due過ぎたものを赤く、完了したものを未完了に戻す

--- a/03_todoApp/index.html
+++ b/03_todoApp/index.html
@@ -12,11 +12,11 @@
 <body>
   <h1>todo list</h1>
 
-  <input type="text" name="todo" id="todoContent" value="" placeholder="todoを入力">
-  <input type="date" min="2023-04-01" class="dueDate">
+  <input type="text" name="todo" class="todoText" value="" placeholder="todoを入力">
+  <input type="date" min="2023-04-01" class="todoDue">
   <button type="button" id="add" class="addButton">追加する</button>
 
-  <ul class="todoLists"></ul>
+  <ul class="todoListBox"></ul>
 
   <button type="button" id="reset" class="resetButton">すべてのデータを削除する</button>
 
