--- a/03_todoApp/index.html
+++ b/03_todoApp/index.html
@@ -7,7 +7,7 @@
 
   <link rel="stylesheet" href="./src/css/style.css">
   <script src="./src/javascript/script.js"></script>
-  <title>test</title>
+  <title>todoApp</title>
 </head>
 <body>
   <h1>todo list</h1>
