--- a/03_todoApp/index.html
+++ b/03_todoApp/index.html
@@ -13,7 +13,7 @@
   <h1>todo list</h1>
 
   <input type="text" name="todo" class="todoText" value="" placeholder="todoを入力">
-  <input type="date" min="2023-04-01" class="todoDue">
+  <input type="date" class="todoDue">
   <button type="button" id="add" class="addButton">追加する</button>
 
   <ul class="todoListBox"></ul>
