--- a/03_todoApp/index.html
+++ b/03_todoApp/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="stylesheet" href="./src/css/style.css">
-  <script src="./src/javascript/script2.js"></script>
+  <script src="./src/javascript/script.js"></script>
   <title>todoApp</title>
 </head>
 <body>
