--- a/03_todoApp/index.html
+++ b/03_todoApp/index.html
@@ -15,20 +15,20 @@
       <h1 class="title">todo list</h1>
       <div class="addListForm">
         <div class="addListForm__input">
-          <input type="text" name="todo" class="todoText" value="" placeholder="todoを入力">
-          <input type="date" class="todoDue">
+          <input type="text" name="todo" class="addListForm__textbox" data-js="todoText" value="" placeholder="todoを入力">
+          <label class="addListForm__label" for="todoDue">期日：</label>
+          <input type="date" class="addListForm__duedate" id="todoDue" data-js="todoDue">
         </div>
-        <button type="button" id="add" class="addButton">追加</button>
+        <button type="button" id="add" class="addListForm__addButton" data-js="addButton">追加</button>
       </div>
 
-      <ul class="todoListBox"></ul>
-
+      <ul class="todoLists" data-js="todoListBox"></ul>
     </main>
     <footer class="footer">
-      <button type="button" id="reset" class="resetButton">DELETE ALL DATA</button>
+      <button type="button" id="reset" class="footer__resetButton" data-js="resetButton">DELETE ALL DATA</button>
       <div class="footer__showButton">
-        <label for="show" class="showFinishedItemLabel">実行済みを表示</label>
-        <input type="checkbox" id="show" class="showFinishedItemButton"></input>
+        <label for="show" class="footer__showFinishedItemLabel">実行済みを表示</label>
+        <input type="checkbox" id="show" class="footer__showFinishedItemButton" data-js="showFinishedItemButton"></input>
       </div>
     </footer>
   </div>
