--- a/03_todoApp/index.html
+++ b/03_todoApp/index.html
@@ -19,7 +19,7 @@
           <label class="addListForm__label" for="todoDue">期日：</label>
           <input type="date" class="addListForm__duedate" id="todoDue" data-js="todoDue">
         </div>
-        <button type="button" id="add" class="addListForm__addButton" data-js="addButton">追加</button>
+        <button type="button" id="add" class="addListForm__addNewListButton" data-js="addNewListButton">追加</button>
       </div>
 
       <ul class="todoLists" data-js="todoListBox"></ul>
