--- a/04_entryForm/index.html
+++ b/04_entryForm/index.html
@@ -57,10 +57,10 @@
       <fieldset>
         <legend>キャンペーンに応募しますか？</legend>
         <label>
-          <input type="radio" name="yes">応募する
+          <input type="radio" name="campaign" value="yes" required>応募する
         </label>
         <label>
-          <input type="radio" name="no">応募しない
+          <input type="radio" name="campaign" value="no">応募しない
         </label>
       </fieldset>
 
