EF 年式と走行距離のoptionタグを生成

--- a/04_entryForm/index.html
+++ b/04_entryForm/index.html
@@ -26,27 +26,13 @@
         </select>
 
         <label for="modelYear">年式</label>
-        <select name="modelYear" id="modelYear" required>
+        <select name="modelYear" id="modelYear" data-js="yearSelectMenu" required>
           <option value="" selected>選択してください</option>
-          <option value="2023">2023年式</option>
-          <option value="2023">2022年式</option>
-          <option value="2023">2021年式</option>
-          <option value="2023">2020年式</option>
-          <option value="2023">2019年式</option>
-          <option value="2023">2018年式</option>
-          <option value="2023">2017年式</option>
         </select>
 
         <label for="mileage">走行距離</label>
-        <select name="mileage" id="mileage" required>
+        <select name="mileage" id="mileage" data-js="mileageSelectMenu" required>
           <option value="" selected>選択してください</option>
-          <option value="under10000">1万キロ未満</option>
-          <option value="10000">1万キロ以上</option>
-          <option value="20000">2万キロ以上</option>
-          <option value="20000">3万キロ以上</option>
-          <option value="20000">4万キロ以上</option>
-          <option value="20000">5万キロ以上</option>
-          <option value="20000">6万キロ以上</option>
         </select>
       </fieldset>
 
