--- a/04_entryForm/index.html
+++ b/04_entryForm/index.html
@@ -7,13 +7,14 @@
 
   <link rel="stylesheet" href="./src/css/style.css">
   <script src="./src/javascript/main.js" type="module"></script>
-  <title>test</title>
+  <title>エントリーフォーム</title>
 </head>
 <body>
   <div class="wrapper">
     <form action="" method="post">
       <fieldset>
         <legend>車種情報入力</legend>
+
         <label for="maker" data-js="makerSelectMenuLabel">メーカー名<span class="requiredText">必須</span></label>
         <select name="maker" id="maker" required data-js="makerSelectMenu">
           <option value="" selected>選択してください</option>
@@ -64,31 +65,31 @@
         <legend>お客様情報の入力</legend>
         <label for="customerName" data-js="customerNameLabel">お名前<span class="requiredText">必須</span>
         </label>
-        <input type="text" name="customerName" id="customerName" autocomplete="name" required>
+        <input type="text" name="customerName" id="customerName" autocomplete="name" required data-js="customerInfo">
         <p class="hide attentionText" data-js="customerNameAttention">お名前を入力してください</p>
 
         <label for="customerPostcode" data-js="customerPostcodeLabel">郵便番号<span class="requiredText">必須</span>
         </label>
-        <input type="text" name="customerPostcode" id="customerPostcode" autocomplete="postal-code" required>
+        <input type="text" name="customerPostcode" id="customerPostcode" autocomplete="postal-code" required data-js="customerInfo">
         <p class="hide attentionText" data-js="customerPostcodeAttention">郵便番号を入力してください</p>
 
-        <label for="customerTell" data-js="customerTelLabel">電話番号<span class="requiredText">必須</span>
+        <label for="customerTel" data-js="customerTelLabel">電話番号<span class="requiredText">必須</span>
         </label>
-        <input type="tel" name="customerTel" id="customerTel" autocomplete="tel" required>
+        <input type="tel" name="customerTel" id="customerInfo" autocomplete="tel" required data-js="customerInfo">
         <p class="hide attentionText" data-js="customerTelAttention">電話番号を入力してください</p>
 
         <label for="customerEmail" data-js="customerEmailLabel">メールアドレス<span class="requiredText">必須</span>
         </label>
-        <input type="email" name="customerEmail" id="customerEmail" autocomplete="email" placeholder="test@example.com" required>
+        <input type="email" name="customerEmail" id="customerEmail" autocomplete="email" placeholder="test@example.com" required data-js="customerInfo">
         <p class="hide attentionText" data-js="customerEmailAttention">メールアドレスを入力してください</p>
 
         <label data-js="campaignLabel">キャンペーンに応募しますか？<span class="requiredText">必須</span></label>
 
         <label>
-          <input type="radio" name="campaign" value="yes" required>応募する
+          <input type="radio" name="campaign" value="yes" required data-js="campaign">応募する
         </label>
         <label>
-          <input type="radio" name="campaign" value="no">応募しない
+          <input type="radio" name="campaign" value="no" data-js="campaign">応募しない
         </label>
         <p class="hide attentionText" data-js="campaignAttention">キャンペーンを選択してください</p>
 
