確認画面に変更が適用されるように修正

--- a/04_entryForm/index.html
+++ b/04_entryForm/index.html
@@ -41,7 +41,7 @@
 
         <div class="detailBox" data-js="detailBox">
           <label for="model">モデル・グレード<span class="info">※上記3点を選択後に選択できます</span></label>
-          <select name="model" id="model" data-js="gradeSelectMenu" disabled>
+          <select name="model" id="model" data-js="modelSelectMenu" disabled>
             <option value="">選択してください</option>
             <option value="unknown">わからない</option>
           </select>
@@ -108,13 +108,13 @@
           <p data-js="carNameConfirmationResult">車種名：</p>
           <p data-js="modelYearConfirmationResult">年式：</p>
           <p data-js="mileageConfirmationResult">走行距離：</p>
-          <p data-js="modelConfirmationResult">モデル・グレード：</p>
-          <p data-js="colorConfirmationResult">車体の色：</p>
+          <p data-js="modelConfirmationResult">モデル・グレード： 未指定</p>
+          <p data-js="colorConfirmationResult">車体の色： 未指定</p>
           <p data-js="customerNameConfirmationResult">お名前：</p>
           <p data-js="customerPostcodeConfirmationResult">郵便番号：</p>
           <p data-js="customerTelConfirmationResult">電話番号：</p>
           <p data-js="customerEmailConfirmationResult">メールアドレス：</p>
-          <p data-js="campaignConfirmationResult">キャンペーンに応募しますか：</p>
+          <p data-js="campaignConfirmationResult">キャンペーンに応募しますか？：</p>
         </div>
         <button type="submit">申し込む</button>
         <button type="button">入力内容を変更する</button>
